syntax = "proto3";

package types;
option go_package = "../types";

message SyncTxConfig {
  string chain33host = 1;
  string pushHost = 2;
  string pushName = 3;
  string pushBind = 4;
  int32 maturityDegree = 5;
  int64 fetchHeightPeriodMs = 9;
  int64 startSyncHeight     = 10;
  int64 startSyncSequence   = 11;
  string startSyncHash      = 12;
}

message Log {
  string loglevel = 1;
  string logConsoleLevel = 2;
  string logFile = 3;
  uint32 maxFileSize = 4;
  uint32 maxBackups = 5;
  uint32 maxAge = 6;
  bool localTime = 7;
  bool compress = 8;
  bool callerFile = 9;
  bool callerFunction = 10;
}

message EthRelayerCfg {
  string ethChainName            = 1;
  string ethProvider             = 2;
  string ethProviderCli          = 3;
  string bridgeRegistry          = 4;
  int32 ethMaturityDegree        = 5;
  int32 ethBlockFetchPeriod      = 6;
}

message Chain33RelayerCfg {
  SyncTxConfig syncTxConfig      =  1;
  string bridgeRegistryOnChain33 =  2;
  string chainName               =  3;
  int32  chainID4Chain33         =  4;
}

message RelayerConfig {
  string title                        = 1;
  string jrpcBindAddr                 = 2; // Jrpc服务地址
  repeated EthRelayerCfg ethRelayerCfg= 3;
  Chain33RelayerCfg chain33RelayerCfg = 4;
  Log log                             = 5;
  string dbdriver                     = 6; //数据库类型
  string dbPath                       = 7;   //数据库存储目录
  int32 dbCache                       = 8;   //数据库缓存大小
  bool processWithDraw                = 9;
  string remindUrl                    = 10;   // 代理打币地址金额不够时发生提醒短信的 url
}

message SyncTxReceiptConfig {
  string chain33host        = 1;
  string pushHost           = 2;
  string pushName           = 3;
  string pushBind           = 4;
  int64 startSyncHeight     = 5;
  int64 startSyncSequence   = 6;
  string startSyncHash      = 7;
  repeated string contracts = 8;
}